# hackz-megalo

./: .gitignore  Dockerfile  README.md  code_generator.py  code_mapping.json  detection_code.py  device-test.py  docker-compose.yml  gui_pipeline.py  guitar_editor_gui.py  main.py  onset_live_basic_code.py  onset_live_basic_dode.py  onset_live_basic_pitch.py  output_script.py  pyproject.toml  run_guitar_code.py  test_parse_code.py
