[project]
name = "hacks-megalo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basic-pitch>=0.4.0",
    "librosa>=0.11.0",
    "llvmlite==0.43.*",
    "matplotlib>=3.10.8",
    "numba==0.60.*",
    "onnx>=1.19.0",
    "onnxruntime<1.24",
    "setuptools<81",
    "tf2onnx>=1.17.0",
    "tensorflow-io-gcs-filesystem==0.31.0", # 🚨 トラップ1の回避（Windows用バージョン固定）
    "pretty-midi>=0.2.11",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]
